<resources>
    <string name="app_name">SmartDesign</string>
    <string name="smart_design">Smart Design</string>
    <string name="home_tech">Home Tech</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="user_settings">User Settings</string>
    <string name="logout">Logout</string>
    <string name="remove_user">Remove User</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="room_control">Room Control</string>
    <string name="add_user">Add User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
