<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuProfileBaNu"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>


    <item
        android:id="@+id/operateBaNu"
        android:icon="@drawable/ic_room"
        android:title="Operate" />


    <item
        android:id="@+id/menuLogoutBaNu"
        android:icon="@drawable/ic_logou"
        android:title="@string/logout"/>


    <item android:title="Others">

        <menu>
            <item
                android:id="@+id/Support"
                android:icon="@drawable/ic_livehelp"
                android:title="@string/support"/>

            <item
                android:id="@+id/Aboutus"
                android:icon="@drawable/ic_about"
                android:title="@string/about_us"/>


        </menu>

    </item>


</menu>